# CG2023

./: .gitignore  README.md
Fase1/: CMakeLists.txt
Fase1/configs/: test_1_5.xml
Fase1/include/: Camera.h  Model.h  Scene.h  SceneParam.h  Vec3f.cpp  Vec3f.h  engine.h  generator.h
Fase1/include/common/: Vec3f.h
Fase1/include/engine/: Camera.h  Model.h  Scene.h  SceneParam.h  engine.h
Fase1/include/generator/: Box.h  Cone.h  Primitives.h
Fase1/src/: Camera.cpp  Model.cpp  Scene.cpp  SceneParam.cpp  Vec3f.cpp  engine.cpp  generator.cpp  tinyxml2.cpp
Fase1/src/common/: Vec3f.cpp
Fase1/src/engine/: Camera.cpp  Model.cpp  Scene.cpp  SceneParam.cpp  engine.cpp
Fase1/src/generator/: Cone.cpp  Plane.cpp  Sphere.cpp  generator.cpp
Fase2/: CMakeLists.txt  README.md
Fase2/configs/: solar_system.xml  test_1_1.xml
Fase2/include/common/: Parser.h  Vec3f.h
Fase2/include/engine/: Model.h  Parser.h  Scene.h  engine.h
Fase2/include/engine/transform/: Rotate.h  Scale.h  Transform.h  Translate.h
Fase2/include/engine/world/: Camera.h  Group.h  Window.h  World.h
Fase2/include/engine/world/camera/: Camera.h  CameraType.h  FirstPerson.h  Spherical.h
Fase2/include/engine/world/model/: VertexArray.h  VertexBuffer.h
Fase2/include/generator/: Box.h  Cone.h  Plane.h  Sphere.h  Utils.h
Fase2/src/common/: Vec3f.cpp
Fase2/src/common/cg_math/: Vec3f.cpp
Fase2/src/common/cg_utils/: Parser.cpp
Fase2/src/engine/: Camera.cpp  Model.cpp  Parser.cpp  Scene.cpp  VertexArray.cpp  VertexBuffer.cpp  engine.cpp
Fase2/src/engine/transform/: Rotate.cpp  Scale.cpp  Transform.cpp  Translate.cpp
Fase2/src/engine/world/: Camera.cpp  Group.cpp  Window.cpp  World.cpp
Fase2/src/engine/world/camera/: Camera.cpp  CameraType.cpp  FirstPerson.cpp  Spherical.cpp
Fase2/src/engine/world/model/: Model.cpp  VertexArray.cpp  VertexBuffer.cpp
Fase2/src/generator/: Box.cpp  Cone.cpp  Plane.cpp  Sphere.cpp  Utils.cpp
Fase3/: CMakeLists.txt
Fase3/configs/: bezier.xml  plane.xml  solar_system.xml
Fase3/include/common/: Vec3f.h
Fase3/include/common/math/: Mat.h  Vec3f.h
Fase3/include/common/utils/: CommonParser.h
Fase3/include/engine/: engine.h
Fase3/include/engine/transform/translate/: TranslateCurve.h
Fase3/include/engine/utils/: EngineParser.h
Fase3/include/engine/world/: Camera.h  Window.h
Fase3/include/generator/: Utils.h
Fase3/include/generator/primitives/: Bezier.h  BezierPatch.h  Plane.h  Primitives.h
Fase3/models/: sphere.3d
Fase3/src/common/math/: Mat.cpp  Vec3f.cpp
Fase3/src/common/utils/: CommonParser.cpp
Fase3/src/engine/: engine.cpp
Fase3/src/engine/transform/: Transform.cpp
Fase3/src/engine/transform/translate/: Translate.cpp  TranslateCurve.cpp
Fase3/src/engine/utils/: EngineParser.cpp
Fase3/src/engine/world/: Camera.cpp  Group.cpp  Window.cpp  World.cpp
Fase3/src/generator/: Box.cpp  Cone.cpp  Sphere.cpp  Utils.cpp  generator.cpp
Fase3/src/generator/primtives/: BezierPatch.cpp  Box.cpp  Plane.cpp
Fase3/src/generator/utils/: DumpVertices.cpp
Fase4/: CMakeLists.txt
Fase4/configs/: bezier.xml  box.xml  cone.xml  plane.xml  solar_system.xml
Fase4/include/common/math/: Mat.h  Vec3f.h
Fase4/include/engine/transform/: Scale.h
Fase4/include/engine/transform/rotate/: Rotate.h  RotateTime.h
Fase4/include/engine/transform/translate/: TranslateCurve.h
Fase4/include/engine/utils/: EngineParser.h
Fase4/include/engine/world/: Camera.h  Group.h  Window.h  World.h
Fase4/include/engine/world/color/: Color.h
Fase4/include/engine/world/lights/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
Fase4/include/engine/world/material/: Material.h
Fase4/include/engine/world/model/: Model.h  VertexArray.h
Fase4/include/generator/primitives/: BezierPatch.h
Fase4/include/generator/utils/: DumpModel.h  DumpVertices.h
Fase4/models/: bezier.3d  bezier_10.3d  box.3d  box_2_3.3d  cone.3d  cone_10_20_40_30.3d  cone_1_2_4_3.3d  plane.3d  plane_2_3.3d  sphere.3d  sphere_100_100_100.3d  sphere_1_10_10.3d  sphere_1_8_8.3d  teapot.3d
Fase4/src/common/math/: Mat.cpp
Fase4/src/common/utils/: CommonParser.cpp
Fase4/src/engine/: engine.cpp
Fase4/src/engine/color/: Color.cpp
Fase4/src/engine/lights/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
Fase4/src/engine/material/: Material.cpp
Fase4/src/engine/transform/: Scale.cpp  Transform.cpp
Fase4/src/engine/transform/rotate/: Rotate.cpp  RotateTime.cpp
Fase4/src/engine/transform/translate/: TranslateCurve.cpp
Fase4/src/engine/utils/: EngineParser.cpp  tinyxml2.cpp
Fase4/src/engine/world/: Camera.cpp  Group.cpp  Window.cpp  World.cpp
Fase4/src/engine/world/model/: Model.cpp  VertexArray.cpp  VertexBuffer.cpp
Fase4/src/generator/: generator.cpp
Fase4/src/generator/primtives/: Bezier.cpp  BezierPatch.cpp  Box.cpp  Cone.cpp  Plane.cpp  Sphere.cpp
Fase4/src/generator/utils/: DumpModel.cpp  DumpVertices.cpp
Fase4/test_files/test_files_phase_2/: test_2_3.xml
Fase4/test_files/test_files_phase_3/: test_3_1.xml
Fase4/test_files/test_files_phase_4/: test_4_1.xml  test_4_3.xml  test_4_5.xml
